scss/components/_toggles.scss
// Toggles
//
// We use radio buttons for toggles, wrapped in a fieldset with a legend to label them.
//
// Markup:
// <fieldset class="toggles">
//   <legend class="label">View by:</legend>
//   <label for="toggle-state">
//     <input id="toggle-state" type="radio" name="receipt-aggregate" value="by-state" checked>
//     <span class="button--primary">State</span>
//   </label>
//   <label for="toggle-contribution-size">
//     <input id="toggle-contribution-size" type="radio" name="receipt-aggregate" value="by-contribution-size">
//     <span class="button--primary">Contribution Size</span>
//   </label>
//   <label for="toggle-employer">
//     <input id="toggle-employer" type="radio" name="receipt-aggregate" value="by-employer">
//     <span class="button--primary">Employer</span>
//   </label>
//   <label for="toggle-occupation">
//     <input id="toggle-occupation" type="radio" name="receipt-aggregate" value="by-occupation">
//     <span class="button--primary">Occupation</span>
//   </label>
// </fieldset>
//
// Styleguide components.toggles

.toggles {
  @include clearfix();

  input[type="radio"] {
    @include u-visually-hidden();
  }

  input:checked {
    & + .button--primary {
      background-color: $navy;
      border: 2px solid $primary-contrast;
      color: $inverse;
    }

    & + .button--secondary {
      background-color: $deep-red;
      border: 2px solid $secondary-contrast;
      color: $inverse;
    }

    & + .button--neutral {
      background-color: $gray-dark;
      border: 2px solid $primary;
    }

    & + .button--empty {
      background-color: $primary;
      border: 2px solid $primary;
      color: $inverse;
    }

    & + .button--map {
      @include u-icon-button('i-map--cream', transparent)
    }

    & + .button--table {
      @include u-icon-button('i-table--cream', transparent, left, 2.5rem)
    }
  }

  label {
    cursor: pointer;
    margin-bottom: 2px;
  }

  label:first-of-type {
    .button {
      border-radius: 4px 4px 0 0;
    }
  }

  label:last-of-type {
    margin-bottom: 0;

    .button {
      border-radius: 0 0 4px 4px;
    }
  }

  .button {
    border-radius: 0;
    display: block;
    font-weight: normal;
    margin-right: 1px;
  }
}

.toggles--small {
  margin-bottom: 0;

  label {
    float: left;
  }

  label:first-of-type {
    .button {
      border-radius: 4px 0 0 4px;
    }
  }

  label:last-of-type {
    .button {
      border-radius: 0 4px 4px 0;
    }
  }

  .label {
    float: left;
    margin: .5rem 1rem 0 0;
  }

  .button {
    margin-right: -1px;
  }
}

// If the toggle group is actually buttons and not radios
.toggles--buttons {
  .button {
    border-radius: 0;
    display: block;
    font-weight: normal;
    margin-right: 1px;

    &:first-of-type {
      border-radius: 4px 4px 0 0;
    }

    &:last-of-type {
      border-radius: 0 0 4px 4px;
    }
  }

  .is-active.button--primary {
    background-color: $navy;
    border: 2px solid $primary-contrast;
    color: $inverse;
  }

  .is-active.button--secondary {
    background-color: $deep-red;
    border: 2px solid $secondary-contrast;
    color: $inverse;
  }

  .is-active.button--neutral {
    background-color: $gray-dark;
    border: 2px solid $primary;
  }

  .is-active.button--empty {
    background-color: $primary;
    border: 2px solid $primary;
    color: $inverse;
  }
}

.toggles--simple {
  .toggle {
    border-bottom: 1px dotted $primary;
    color: $primary;
  }

  .is-active {
    border-bottom: none;
    font-weight: bold;
  }
}

// BREAKPOINT: MEDIUM
// - Display toggles in a row

@include media($med) {
  .toggles {
    label {
      float: left;
      margin-top: 0;
    }

    label:first-of-type {
      .button {
        border-radius: 4px 0 0 4px;
      }
    }

    label:last-of-type {
      .button {
        border-radius: 0 4px 4px 0;
        margin-right: 0;
      }
    }
  }

  .toggles--buttons {
    .button {
      border-radius: 0;
      float: left;
      margin-top: 0;

      &:first-of-type {
        border-radius: 4px 0 0 4px;
      }

      &:last-of-type {
        border-radius: 0 4px 4px 0;
      }

    }
  }
}

